fix contrast

--- a/themes/x64/assets/css/main.css
+++ b/themes/x64/assets/css/main.css
@@ -4,7 +4,7 @@
   --max-width: 768px;
   --min-width: 400px;
   --site-spacing: 2.5rem;
-  --shadow: #000000AA;
+  --shadow: #000000CC;
   --background-color: #010101;
   --background-soft-light: #020202;
   --rss-color: #F26522;
@@ -69,7 +69,7 @@
   display: block;
   position: relative;
   border-radius: 8px;
-  background: var(--background-soft-light);
+  background: var(--font-color-dark);
   padding: 16px 32px;
   color: var(--font-color);
   font-weight: 600;
